# locksmitha

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  API_UI_INTEGRATION_GUIDE.md  Dockerfile  INTEGRATION_TESTING.md  MANUAL_PASSWORD_RESET.md  README.md  docker-compose.dev.yml  docker-compose.yml  docker_improvements.md  env.sample  login_service_example.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: docker-publish.yml  tests.yml
docs/: authentication_patterns.md  deployment_examples.md  gap-analysis.md  role_based_access_architecture.md
src/locksmitha/: Dockerfile  README.md  api_key_auth.py  apikey.py  auth.py  config.py  email_utils.py  main.py
src/login/: auth.py  config.py  email_utils.py  main.py
tests/: conftest.py  test_main.py
tests/integration/: test_auth_integration.py  test_endpoints.py
tests/postman/: locksmitha.postman_collection.json  login.postman_collection.json
tests/resources/: test.db
tests/scripts/: seed_async_test_db.py
tests/unit/: test_apikey.py  test_auth.py  test_auth_integration.py  test_config.py  test_email_utils.py  test_health.py  test_main.py  test_protected_endpoint.py
